# ileqg

./: .travis.yml  CMakeLists.txt  README.md  package.xml
ileqg_matlab/: README.md  arm2linkGoalObsFull.m  carLikeGoalObsFull.m  iterativeLQSolver.m  pointMassGoal.m  pointMassGoalObs.m  pointMassGoalObsFull.m  pointMassGoalObsFullVarNoise.m  pointMassGoalObs_2s.m  simulate_infGains.m  simulate_infGains_2s.m  startup.m
ileqg_matlab/arm2link/: arm2link_joint_cost.m  arm2link_joint_dyn.m  arm2link_joint_dyngoal_cost.m  arm2link_joint_dyngoal_dyn.m  arm2link_joint_plot.m  arm2link_state_cost.m  arm2link_state_dyngoal_plot.m  arm2link_state_obstacle_cost.m  arm2link_state_obstacle_plot.m  arm2link_state_plot.m  arm2link_workspace_cost.m  arm2link_workspace_dyn.m  arm2link_workspace_dyngoal_cost.m  arm2link_workspace_dyngoal_dyn.m  arm2link_workspace_dyngoal_plot.m  arm2link_workspace_dyngoalobs_cost.m  arm2link_workspace_dyngoalobs_dyn.m  arm2link_workspace_dyngoalobs_plot.m  arm2link_workspace_dyngoalobsfull_cost.m  arm2link_workspace_dyngoalobsfull_dyn.m  arm2link_workspace_dyngoalobsfull_plot.m  arm2link_workspace_plot.m
ileqg_matlab/carLikeRobot/: carLikeRobot_cost.m  carLikeRobot_dyn.m  carLikeRobot_dyngoal_cost.m  carLikeRobot_dyngoal_dyn.m  carLikeRobot_dyngoal_plot.m  carLikeRobot_dyngoalobs_cost.m  carLikeRobot_dyngoalobs_dyn.m  carLikeRobot_dyngoalobs_plot.m  carLikeRobot_dyngoalobsfull_cost.m  carLikeRobot_dyngoalobsfull_dyn.m  carLikeRobot_dyngoalobsfull_plot.m  carLikeRobot_plot.m
ileqg_matlab/lqsolutions/: kcc_fb_multi_inf.m  kcc_multi.m  leqr_fb_multi_inf.m  leqr_multi.m
ileqg_matlab/pointMass/: pointMass_cost.m  pointMass_dyn.m  pointMass_dyngoal_cost.m  pointMass_dyngoal_dyn.m  pointMass_dyngoal_plot.m  pointMass_dyngoalobs_cost.m  pointMass_dyngoalobs_dyn.m  pointMass_dyngoalobs_dyn_2noises.m  pointMass_dyngoalobs_plot.m  pointMass_dyngoalobsfull_cost.m  pointMass_dyngoalobsfull_dyn.m  pointMass_dyngoalobsfull_plot.m  pointMass_dyngoalobsfullvar_dyn.m  pointMass_plot.m
ileqg_matlab/util/: DrawRectangle.m  computeEllipse.m  compute_collisions.m  compute_cost.m  (+5 more)
ileqg_msgs/: CMakeLists.txt  package.xml
ileqg_msgs/msg/: FF_FB_obs_plan.msg
ileqg_solver/: CMakeLists.txt  package.xml
ileqg_solver/include/: IterativeLQSolver.h  LQSolver.h  OCProblemFH.h  PointMassLinear.h  PointMassLinearObstacle.h  types.h
ileqg_solver/launch/: linear_mpc.launch
ileqg_solver/src/: IterativeLQSolver.cpp  interactive_target.py  mpc_point_mass_node.cpp  mpc_point_mass_obstacle_node.cpp  point_mass_obstacle_node.cpp
include/: IterativeLQSolver.h  LQSolver.h  OCProblemFH.h  PointMassLinear.h
src/: IterativeLQSolver.cpp  lwr_mpc_linear_node.cpp
